--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,9 @@ set-option -g default-shell /bin/zsh
 set-option -g default-command /bin/zsh
 set-option -s escape-time 0
 
+set-window-option -g mode-mouse on
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
 set-option -g prefix C-t
 bind-key C-t send-prefix
 unbind-key C-b
